--- a/starter/app/src/main/res/navigation/app_navigation.xml
+++ b/starter/app/src/main/res/navigation/app_navigation.xml
@@ -18,5 +18,27 @@
         android:id="@+id/welcomeFragment"
         android:name="com.udacity.shoestore.welcome.WelcomeFragment"
         tools:layout="@layout/welcome_fragment"
-        android:label="WelcomeFragment" />
+        android:label="WelcomeFragment" >
+        <action
+            android:id="@+id/action_welcomeFragment_to_instructionFragment"
+            app:destination="@id/instructionFragment"
+            app:popUpTo="@id/welcomeFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/instructionFragment"
+        android:name="com.udacity.shoestore.instruction.InstructionFragment"
+        android:label="InstructionFragment"
+        tools:layout="@layout/instruction_fragment">
+        <action
+            android:id="@+id/action_instructionFragment_to_listShoesFragment"
+            app:destination="@id/listShoesFragment"
+            app:popUpTo="@id/login_Fragment"
+            app:popUpToInclusive="false" />
+    </fragment>
+    <fragment
+        android:id="@+id/listShoesFragment"
+        android:name="com.udacity.shoestore.shoes.ListShoesFragment"
+        android:label="list_shoes_fragment"
+        tools:layout="@layout/list_shoes_fragment" />
 </navigation>
