--- a/starter/app/src/main/res/layout/login_fragment.xml
+++ b/starter/app/src/main/res/layout/login_fragment.xml
@@ -25,6 +25,7 @@
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginTop="@dimen/default_margin"
             android:layout_marginEnd="@dimen/default_margin"
+            android:imeOptions="actionNext"
             android:ems="10"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
@@ -50,6 +51,7 @@
             android:layout_marginTop="@dimen/big_margin"
             android:layout_marginEnd="@dimen/default_margin"
             android:ems="10"
+            android:imeOptions="actionDone"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:textColor="@android:color/black" />
