--- a/starter/app/src/main/res/layout/shoes_details_fragment.xml
+++ b/starter/app/src/main/res/layout/shoes_details_fragment.xml
@@ -40,6 +40,7 @@
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginEnd="@dimen/default_margin"
+                    android:imeOptions="actionNext"
                     android:inputType="textPersonName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -65,6 +66,7 @@
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginEnd="@dimen/default_margin"
+                    android:imeOptions="actionNext"
                     android:inputType="textPersonName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -90,6 +92,7 @@
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginEnd="@dimen/default_margin"
+                    android:imeOptions="actionNext"
                     android:inputType="numberDecimal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -129,6 +132,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_margin"
             android:background="@color/colorAccent"
+            android:imeOptions="actionDone"
             android:text="Cancel"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@+id/save_button"
