--- a/starter/app/src/main/res/layout/instruction_fragment.xml
+++ b/starter/app/src/main/res/layout/instruction_fragment.xml
@@ -12,9 +12,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/big_margin"
             android:gravity="center"
-            android:text="HOW USE"
+            android:text="@string/how_use"
             android:textColor="@color/colorPrimary"
-            android:textSize="36dp"
+            android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
             android:layout_marginTop="@dimen/default_margin"
             android:layout_marginEnd="@dimen/default_margin"
             android:layout_marginBottom="@dimen/default_margin"
-            android:text="LOREM IPSUM adsfghasdhgflkashdfkjasdhfklajsdhfklahsdfkljhsdlkfhasdlk"
+            android:text="@string/how_use_text"
             app:layout_constraintBottom_toTopOf="@+id/next_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
             android:layout_marginEnd="@dimen/default_margin"
             android:layout_marginBottom="@dimen/big_margin"
             android:background="@color/colorPrimary"
-            android:text="Go to Home"
+            android:text="@string/go_to_home"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
