--- a/starter/app/src/main/res/layout/shoes_details_fragment.xml
+++ b/starter/app/src/main/res/layout/shoes_details_fragment.xml
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_marginTop="@dimen/big_margin"
-                    android:text="Shoe Name:"
+                    android:text="@string/shoe_name"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_marginTop="@dimen/big_margin"
-                    android:text="Company:"
+                    android:text="@string/company"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_marginTop="@dimen/big_margin"
-                    android:text="Shoe size:"
+                    android:text="@string/shoe_size"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/default_margin"
                     android:layout_marginTop="@dimen/big_margin"
-                    android:text="Description:"
+                    android:text="@string/description"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -133,7 +133,7 @@
             android:layout_marginStart="@dimen/default_margin"
             android:background="@color/colorAccent"
             android:imeOptions="actionDone"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@+id/save_button"
             app:layout_constraintEnd_toStartOf="@+id/save_button"
@@ -148,7 +148,7 @@
             android:layout_marginEnd="@dimen/default_margin"
             android:layout_marginBottom="@dimen/big_margin"
             android:background="@color/colorPrimaryDark"
-            android:text="Save"
+            android:text="@string/save"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
