--- a/starter/app/src/main/res/layout/welcome_fragment.xml
+++ b/starter/app/src/main/res/layout/welcome_fragment.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Welcome"
+            android:text="@string/welcome"
             android:textColor="@color/colorAccent"
             android:textSize="36sp"
             android:textStyle="bold" />
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
             android:gravity="center"
-            android:text="Store shoes"
+            android:text="@string/store_shoes"
             android:textColor="@color/colorPrimary"
             android:textSize="32sp"
             android:textStyle="bold" />
@@ -38,7 +38,7 @@
             android:background="@color/colorPrimary"
             android:paddingStart="@dimen/default_margin"
             android:paddingEnd="@dimen/default_margin"
-            android:text="Go to instruction"
+            android:text="@string/go_to_instruction"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/create_button"
             app:layout_constraintEnd_toEndOf="@+id/create_button"
