--- a/starter/app/src/main/res/layout/instruction_fragment.xml
+++ b/starter/app/src/main/res/layout/instruction_fragment.xml
@@ -13,9 +13,8 @@
             android:layout_marginTop="@dimen/big_margin"
             android:gravity="center"
             android:text="@string/how_use"
+            style="@style/Title"
             android:textColor="@color/colorPrimary"
-            android:textSize="36sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
