--- a/starter/app/src/main/res/layout/item_shoe.xml
+++ b/starter/app/src/main/res/layout/item_shoe.xml
@@ -15,11 +15,11 @@
 
         <TextView
             android:id="@+id/name_label"
+            style="@style/Label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_margin"
             android:text="@string/shoe_name"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,6 +36,7 @@
 
         <TextView
             android:id="@+id/size_label"
+            style="@style/Label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_margin"
@@ -55,6 +56,7 @@
 
         <TextView
             android:id="@+id/company_label"
+            style="@style/Label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_margin"
@@ -74,6 +76,7 @@
 
         <TextView
             android:id="@+id/description_label"
+            style="@style/Label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/default_margin"
