--- a/starter/app/src/main/res/layout/login_fragment.xml
+++ b/starter/app/src/main/res/layout/login_fragment.xml
@@ -10,14 +10,13 @@
 
         <TextView
             android:id="@+id/label_email"
+            style="@style/Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/big_margin"
             android:layout_marginStart="@dimen/default_margin"
+            android:layout_marginTop="@dimen/big_margin"
             android:layout_marginEnd="@dimen/default_margin"
-            android:text="@string/type_email"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:text="@string/type_email" />
 
         <EditText
             android:id="@+id/user_email"
@@ -26,23 +25,20 @@
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginTop="@dimen/default_margin"
             android:layout_marginEnd="@dimen/default_margin"
-            android:imeOptions="actionNext"
-            android:ems="10"
             android:hint="@string/email"
+            android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/black" />
 
         <TextView
             android:id="@+id/type_password"
+            style="@style/Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginTop="@dimen/default_margin"
             android:layout_marginEnd="@dimen/default_margin"
-
-            android:text="@string/type_email"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:text="@string/type_email" />
 
         <EditText
             android:id="@+id/user_password"
@@ -51,22 +47,20 @@
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginTop="@dimen/big_margin"
             android:layout_marginEnd="@dimen/default_margin"
-            android:ems="10"
-            android:imeOptions="actionDone"
             android:hint="@string/password"
+            android:imeOptions="actionDone"
             android:inputType="textPassword"
             android:textColor="@android:color/black" />
 
         <Button
             android:id="@+id/login_button"
+            style="@style/ButtonPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginTop="@dimen/big_margin"
             android:layout_marginEnd="@dimen/default_margin"
-            android:background="@color/colorPrimary"
             android:text="@string/login"
-            android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/create_button"
             app:layout_constraintEnd_toEndOf="@+id/create_button"
             app:layout_constraintStart_toStartOf="@+id/create_button"
@@ -74,15 +68,14 @@
 
         <Button
             android:id="@+id/create_button"
+            style="@style/ButtonAccent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginTop="@dimen/big_margin"
             android:layout_marginEnd="@dimen/default_margin"
             android:layout_marginBottom="@dimen/big_margin"
-            android:background="@color/colorAccent"
             android:text="@string/new_login"
-            android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/user_password"
             app:layout_constraintStart_toStartOf="@+id/user_password"
