--- a/starter/app/src/main/res/layout/welcome_fragment.xml
+++ b/starter/app/src/main/res/layout/welcome_fragment.xml
@@ -9,37 +9,34 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/welcome"
-            android:textColor="@color/colorAccent"
-            android:textSize="36sp"
-            android:textStyle="bold" />
+            android:textColor="@color/colorAccent" />
 
         <TextView
+            style="@style/Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
             android:gravity="center"
             android:text="@string/store_shoes"
-            android:textColor="@color/colorPrimary"
-            android:textSize="32sp"
-            android:textStyle="bold" />
+            android:textColor="@color/colorPrimary" />
 
         <Button
             android:id="@+id/next_button"
+            style="@style/ButtonPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginTop="@dimen/big_margin"
             android:layout_marginEnd="@dimen/default_margin"
-            android:background="@color/colorPrimary"
             android:paddingStart="@dimen/default_margin"
             android:paddingEnd="@dimen/default_margin"
             android:text="@string/go_to_instruction"
-            android:textColor="@android:color/white"
             app:layout_constraintBottom_toTopOf="@+id/create_button"
             app:layout_constraintEnd_toEndOf="@+id/create_button"
             app:layout_constraintStart_toStartOf="@+id/create_button"
